--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+        <script type="text/javascript" src="bower_components/angular/angular.js"></script>
 
         <script type="text/javascript" src="bower_components/golden-layout/dist/goldenlayout.js"></script>
         <link type="text/css" rel="stylesheet" href="bower_components/golden-layout/src/css/goldenlayout-base.css" />
