--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
         <link type="text/css" rel="stylesheet" href="bower_components/golden-layout/src/css/goldenlayout-dark-theme.css" />
 
         <script type="text/javascript" src="app.js"></script>
+
+        <template type="text/html" id="userNameTemplate">
+            <div ng-controller="user" class="section">
+                <strong>Username</strong> {{name}}
+            </div>
+        </template>
+
+        <template type="text/html" id="userDetailTemplate">
+            <div ng-controller="userDetails" class="section">
+                <strong>Age</strong> {{age}}
+            </div>
+        </template>
+
     </head>
 
     <body>
+
     </body>
 </html>
